# bold-humanoid

./: .bash_team  .editorconfig  .gitattributes  .gitignore  .gitmodules  .kdev_ignore  .kdev_include_paths  CMakeLists.txt  Makefile  README.md  bh  bh_completion  bold-humanoid.kdev4  boldhumanoid.py  bundle.sh  config-drew.ini  config-sander.ini  config.ini  configuration-berlin.json  configuration-drews.json  configuration-german-open-2014.json  configuration-hamburg.json  configuration-hatfield.json  configuration-iran-open-2014.json  configuration-metadata.json  configuration-rc2014.json  configuration-rohow2014.json  configuration-team.json  configuration.json  defparams.py  deploy  drawbridge.cc  germanopen.ini  hatfield.ini  hatfield4.ini  look-errors.csv  mac-addresses.txt  main.cc  motion_4096.json  opencvtest.cc  (+8 more)
Agent/: Agent.cc  agent.cc  agent.hh  agent.i  agent.ih  approachBall.cc  circleBall.cc  controlHead.cc  init.cc  initBody.cc  initCamera.cc  initMotionManager.cc  lookAt.cc  lookAtBall.cc  lookAtGoal.cc  lookForBall.cc  lookForGoal.cc  preKickLook.cc  processImage.cc  processImage.cc~  processInputCommands.cc  readCM730SensorValues.cc  readStaticHardwareState.cc  readSubBoardData.cc  registerStateTypes.cc  run.cc  setOptionTree.cc  standUpIfFallen.cc  stop.cc  think.cc
AgentModel/: agentmodel.hh  agentmodel.ih  initBody.cc  updatePosture.cc
AgentPosition/: agentToWorldTransform.cc  agentWorldTransform.cc  agentposition.hh  worldAgentTransform.cc  worldToAgentTransform.cc
AgentState/: agentstate.cc  agentstate.hh  agentstate.i  allStateObjects.cc  setters.cc
Ambulator/: Ambulator.cc  ambulator.hh  ambulator.i  ambulator.ih  setters.cc  step.cc
Balance/: balance.hh
BehaviourControl/: behaviourcontrol.cc  behaviourcontrol.hh
BlobDetector/: blobdetector.hh  blobdetector.ih  detectBlobs.cc  runLengthEncode.cc  runSetToBlob.cc
BodyControl/: bodycontrol.cc  bodycontrol.hh
BodyModel/: bodymodel.hh
BodyPart/: bodypart.hh  bodypart.i
CM730/: cm730.cc  cm730.hh
CM730CommsModule/: cm730commsmodule.hh
CM730Platform/: cm730platform.hh
CM730Snapshot/: CM730Snapshot.cc  CM730Snapshot.hh  cm730snapshot.hh  cm730snapshot.i  init.cc
Camera/: Camera.cc  camera.hh  camera.ih  capture.cc  createControls.cc  createFormats.cc  fillControlMenuItems.cc  getControlValue.cc  initMemoryMapping.cc  listControls.cc  listFormats.cc  logFrameIntervalDetails.cc  open.cc  pixelFormatRequestSize.cc  setControlValue.cc  startCapture.cc  stopCapture.cc
CameraModel/: CameraModel.cc  cameramodel.hh  cameramodel.i  cameramodel.ih  directionForPixel.cc  expectedPixelSize.cc  pixelForDirection.cc
Clock/: clock.cc  clock.hh  clock.ih  getSeconds.cc  getTimestamp.cc
Colour/: YCbCr.cc  bgr2hsv.cc  colour.hh  colour.i  colour.ih  hsv2bgr.cc  hsvRange.cc  knownColours.cc  operator_ins.cc
Config/: config.cc  config.hh  config.i
Configurable/: configurable.hh  configurable.i  static.cc
Control/: control.hh  control.ih  create.cc  handleRequest.cc  staticfields.cc  writeState.cc
DataStreamer/: DataStreamer.cc  callbackAgentModel.cc  callbackCamera.cc  callbackControl.cc  callbackGameState.cc  callbackHttp.cc  callbackLog.cc  callbackState.cc  callbackTiming.cc  camerasession.cc  close.cc  datastreamer.hh  datastreamer.ih  getDebugControls.cc  init.cc  initialise.cc  jsonsession.cc  prepareControlSyncBytes.cc  prepareImageBytes.cc  prepareSettingUpdateBytes.cc  processCameraCommand.cc  processCommand.cc  registerControls.cc  run.cc  sendCameraControls.cc  sendCameraStateAndOptions.cc  sendImage.cc  sendImageBytes.cc  sendImageTypes.cc  sendStreamLabels.cc  shouldProvideImage.cc  stop.cc  streamImage.cc  update.cc  writeControlSyncJson.cc  writeJson.cc  writeSettingUpdateJson.cc
DebugControl/: debugcontrol.hh
Debugger/: debugger.cc  debugger.hh  debugger.i  debugger.ih
DisjointSet/: disjointset.hh
DisjointSet.old/: disjointset.hh
DistributionTracker/: distributiontracker.hh
DrawBridgeComms/: drawbridgecomms.cc  drawbridgecomms.hh
Drawing/: drawing.cc  drawing.hh
FieldMap/: FieldMap.cc  fieldmap.hh
Filter/: filter.hh
GameController/: GameControllerReceiver.cc  GameControllerReceiver.hh
GameState/: gamestate.hh
GameStateDecoder/: gamestatedecoder.hh
GameStateReceiver/: GameStateReceiver.cc  RoboCupGameControlData.h  gamecontrollertypes.hh  gamestatereceiver.cc  gamestatereceiver.hh  gamestatereceiver.ih  receive.cc
Geometry/: geometry.hh
HistogramLabelTeacher/: HistogramLabelTeacherBase.cc  histogramlabelteacher.hh  histogramlabelteacher.ih
HoughLine/: houghline.hh
HoughLineAccumulator/: houghlineaccumulator.cc  houghlineaccumulator.hh  houghlineaccumulator.ih
HoughLineExtractor/: findLines.cc  findMaxLine.cc  houghlineextractor.hh
ImageCodec/: imagecodec.hh
ImageLabelData/: imagelabeldata.hh
ImageLabeller/: ImageLabeller.cc  imagelabeller.hh
ImagePassHandler/: imagepasshandler.hh
swig/: CMakeLists.txt  boldpy.i  eigen.i  geometry.i  numpy.i
test/: AgentModelTests.hh  AgentPositionTests.cc  AgentPositionTests.hh  AgentStateTests.hh  BlobTests.cc  BlobTests.hh  BodyStateTests.cc  BodyStateTests.hh  Bounds2iTests.cc  Bounds2iTests.hh  BoundsTests.cc  BufferReaderTests.cc  BufferWriterTests.cc  CM730Tests.cc  CM730Tests.hh  CMakeLists.txt  CameraModelTests.cc  CameraModelTests.hh  ColourTests.cc  ColourTests.hh  ConditionalsTests.cc  ConditionalsTests.hh  ConsumerQueueThreadTests.cc  ConsumerQueueThreadTests.hh  CppTests.cc  CppTests.hh  DarwinBodyModelTests.cc  DistributionTrackerTests.cc  DistributionTrackerTests.hh  EigenTests.cc  EigenTests.hh  HalfHullBuilderTests.cc  HalfHullBuilderTests.hh  HistogramLabelTeacherTests.cc  HistogramPixelLabelTests.cc  IncrementalRegressionTests.cc  IntegralImageTests.cc  IntegralImageTests.hh  JointIdTests.cc  JointSelectionTests.cc  (+63 more)
tools/: CMakeLists.txt  Makefile  cameratest.cc  colour-segmentation-eindhoven-2013.ods  colour-segmentation-german-open-2013.ods  colour-segmentation-german-open-2014.ods  colour-segmentation.ods  djsettest.cc  hough.cc  passtest.cc  speakmake  sshdarwin
(+909 files in other folders)
